--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tuxpkg (0.17.0-1) UNRELEASED; urgency=medium
+
+  * Release 0.17.0. See: https://gitlab.com/Linaro/tuxpkg/-/tags/v0.17.0
+
+ -- Ben Copeland <ben.copeland@linaro.org>  Fri, 21 Nov 2025 12:28:19 +0000
+
 tuxpkg (0.16.0-1) UNRELEASED; urgency=medium
 
   * Initial release
